--- a/config.ini
+++ b/config.ini
@@ -14,7 +14,7 @@ is_reid = False
 flip_code = 1
 
 [CAMERA]
-resize_width = 640
+resize_width = 1024
 
 [MODELS]
 # Don't add a trailing slash
@@ -26,37 +26,56 @@ model_reid = person-reidentification-retail-0031
 
 [DETECTION]
 # The confidence (probability) of person detection.
-prob_thld_person = 0.65
+prob_thld_person = 0.50
 
 [TRACKER]
-# Max number of  person reidentification.
+# Max. number of re-identification processes per frame
 reid_limit = 50
 
-# Probability of person re-identification.
-sim_thld = 0.60
+# A threshold value that determines that the features are identical only by similarity.
+# In an environment where feature vectors can be accurately given, evaluating only by 
+# this value, without considering distance and IOU, will be better results.
+# For example, consider setting a low value (around 0.6 ~ 0.8) for re-authentication 
+# at the entrance and setting `hold_track` to true.
+sim_thld = 0.90
 
-# Minumum Probability of person re-identification.
-# This is used in case not overlap detected.
+# Minumum probability threshold of person re-identification, with considering distance
+# and IOU
 min_sim_thld = 0.30
-
-# Probability of person re-identification.
-# This is used when registering a person.
-reg_sim_thld = 0.85
 
 # The iou threshold at which people are considered to overlapped.
 # If you want to restrict to update and register person vector , decrease this value.
-iou_thld = 0.20
+skip_iou_thld = 0.20
+
+# bounding box shape iou threshold
+box_iou_thld = 0.70
+##box_iou_thld = 0.60
 
 # The number of track poins to save.
 # Track point is the center of the person bouding box and 
 # is drawn on the frame as tracking history.
-save_points = 100
+save_points = 150
 
 # The maximum number how many grid to divide frame. 
 # This is used to define boundary area when the tracker counts person. 
 max_grid = 20
 
+# The number of disabling tracking when the re-identification process lost consecutively. 
+# If the number of miss is exceeded, re-identification will be disabled.
+##lost_thld = 30
+lost_thld = 60
+
+# Hold track information of lost person 
+# For example, set true for person re-authentication at the entrance. 
+# Set False to track person traffic on the street. Default is False.
+hold_track = False
+
+# show track points of track person
+# Default value: False
+show_track = False
+
 [COLORS]
 # basic colors
 green = (0, 255, 0)
 skyblue = (255, 255, 0)
+red = (0, 0, 255)
